[package]
name = "rlua"
version = "0.19.7"
authors = ["kyren <kerriganw@gmail.com>"]
edition = "2018"
description = "High level bindings to Lua 5.x"
repository = "https://github.com/amethyst/rlua"
documentation = "https://docs.rs/rlua"
readme = "README.md"
keywords = ["lua"]
license = "MIT"

[badges]
circle-ci = { repository = "amethyst/rlua", branch = "master" }

[features]
default=["builtin-lua54"]
builtin-lua54=["rlua-lua54-sys"]
builtin-lua53=["rlua-lua53-sys"]
builtin-lua51=["rlua-lua51-sys"]

system-lua54=["rlua-lua54-sys", "rlua-lua54-sys/lua54-pkg-config"]
system-lua53=["rlua-lua53-sys", "rlua-lua53-sys/lua53-pkg-config"]
system-lua51=["rlua-lua51-sys", "rlua-lua51-sys/lua51-pkg-config"]
system-luajit=["rlua-lua51-sys", "rlua-lua51-sys/luajit-pkg-config"]

# Remove Lua's os lib
lua-no-oslib=["rlua-lua54-sys/lua-no-oslib","rlua-lua53-sys/lua-no-oslib","rlua-lua51-sys/lua-no-oslib"]

# Enabled functions from the math module that have been deprecated
lua-compat-mathlib = []


[dependencies]
libc = { version = "0.2" }
num-traits = { version = "0.2.14" }
bitflags = { version = "1.0.4" }
bstr = {version = "0.2", features = ["std"], default_features = false }
rlua-lua54-sys = { version = "0.1.6", optional = true }
rlua-lua53-sys = { version = "0.1.6", optional = true }
rlua-lua51-sys = { version = "0.1.6", optional = true }


[dev-dependencies]
rustyline = "6.0"
criterion = "0.3.0"
compiletest_rs = { version = "0.4", features = ["stable"] }

[[bench]]
name = "benchmark"
harness = false
