[package]
name = "rlua"
version = "0.20.0"
authors = ["kyren <kerriganw@gmail.com>"]
edition = "2018"
description = "High level bindings to Lua 5.x"
repository = "https://github.com/mlua-rs/rlua"
documentation = "https://docs.rs/rlua"
readme = "README.md"
keywords = ["lua"]
license = "MIT"
categories = [ "api-bindings", "development-tools::ffi" ]

[badges]
circle-ci = { repository = "mlua-rs/rlua", branch = "master" }

[dependencies]
mlua = { version = "0.9.5" }

[features]
default=["builtin-lua54"]
builtin-lua54=["mlua/lua54", "mlua/vendored"]
builtin-lua53=["mlua/lua53", "mlua/vendored"]
builtin-lua51=["mlua/lua51", "mlua/vendored"]

system-lua54=["mlua/lua54"]
system-lua53=["mlua/lua53"]
system-lua51=["mlua/lua51"]
system-luajit=["mlua/luajit"]

# Remove Lua's os lib
#lua-no-oslib=["rlua-lua54-sys/lua-no-oslib","rlua-lua53-sys/lua-no-oslib","rlua-lua51-sys/lua-no-oslib"]

# Enabled functions from the math module that have been deprecated
#lua-compat-mathlib = []



[dev-dependencies]
rustyline = "13.0"
criterion = "0.5.1"
compiletest_rs = { version = "0.10.2", features = ["stable"] }
