[package]
name = "lua53_sys"
version = "0.1.0"
keywords = ["bindings", "lua"]
categories = ["external-ffi-bindings"]
authors = ["Michael Pollind <mpollind@gmail.com>"]
description = "Bindings to lua's C API"
repository = "https://github.com/pollend/lua-sys"
readme = "README.md"
edition = "2018"
links = "lua5.3"
build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
bindgen = "0.59.2"
git2 = "0.13"
pkg-config = "0.3.24"

[features]
default = []
lua53-pkg-config = []
static = []